@@ -3,6 +3,6 @@
 {:paths   ["src"]
  :deps    {org.clojure/clojure {:mvn/version "1.11.2"}
            com.github.steffan-westcott/clj-otel-api {:local/root "../clj-otel-api"}
-           io.opentelemetry/opentelemetry-sdk-extension-autoconfigure {:mvn/version "1.36.0"}}
+           io.opentelemetry/opentelemetry-sdk-extension-autoconfigure {:mvn/version "1.37.0"}}
  :aliases {:release  {:override-deps {com.github.steffan-westcott/clj-otel-api {:mvn/version "0.2.7"}}}
            :snapshot {:override-deps {com.github.steffan-westcott/clj-otel-api {:mvn/version "0.2.7-SNAPSHOT"}}}}}
