@@ -709,7 +709,7 @@ For an example application `my-app` that exports traces only using OTLP over gRP
                      "-Dotel.metrics.exporter=none"
                      "-Dotel.logs.exporter=none"
                      "-Dotel.exporter.otlp.traces.protocol=grpc"]
-          :extra-deps {io.opentelemetry/opentelemetry-exporter-otlp               {:mvn/version "1.36.0"}
+          :extra-deps {io.opentelemetry/opentelemetry-exporter-otlp               {:mvn/version "1.37.0"}
                        io.opentelemetry.instrumentation/opentelemetry-resources   {:mvn/version "2.2.0-alpha"}
                        io.grpc/grpc-netty-shaded                                  {:mvn/version "1.62.2"}
                        io.grpc/grpc-protobuf                                      {:mvn/version "1.62.2"}
